Изменён базисный метод. Добавлен класс для добавления новых таблиц